add icons to categories
